--- a/Autentication_crud/Views/User/RegisteredUsers.cshtml
+++ b/Autentication_crud/Views/User/RegisteredUsers.cshtml
@@ -13,8 +13,19 @@
 <div>
     @if (TempData["mensajeUpdate"] != null)
     {
-        <div class="alert alert-warning alert-dismissible fase show" role="alert">
+        <div class="alert alert-success alert-dismissible fase show" role="alert">
             @TempData["mensajeUpdate"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+</div>
+<div>
+    @if (TempData["mensajeDeleted"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fase show" role="alert">
+            @TempData["mensajeDeleted"]
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -63,7 +74,7 @@
 
             <td>
                 <a asp-action="UsersUpdate" asp-route-id="@item.UserSecurityId">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserSecurityId">Delete</a> |                
+                <a asp-action="DeleteUser" asp-route-id="@item.UserSecurityId">Delete</a> |                
             </td>
         </tr>
         }
