--- a/Autentication_crud/Views/User/NewUser.cshtml
+++ b/Autentication_crud/Views/User/NewUser.cshtml
@@ -9,7 +9,7 @@
     <div class="row" style="margin-top:50px">
         <div class="col-md-6">
             <form asp-action="NewUser" method="post" enctype="multipart/form-data">
-                <div class="modal-body">
+                @*<div class="modal-body">*@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row">
                         <div class="col-md-6">
@@ -50,22 +50,21 @@
                         </div>
                     </div>
 
-                </div>
+                @*</div>*@
                 <div>
-                    @if (TempData["mensaje"] != null)
+                    @if (TempData["mensajeRegistradoExiste"] != null)
                     {
                         <div class="alert alert-warning alert-dismissible fase show" role="alert">
-                            @TempData["mensaje"]
+                            @TempData["mensajeRegistradoExiste"]
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                     }
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary">Cancelar</button>
-
-                    <input type="submit"  value="Guardar" class="btn btn-primary" />
+                <div class="modal-footer">                    
+                    <a asp-action="RegisteredUsers" class="btn btn-secondary">Cancelar</a>
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
 
             </form>
@@ -75,3 +74,8 @@
         </div>
     </div>
 </div>
+
+@*Validación del lado del cliente*@
+@section Scripts{ 
+    @{ <partial name="_ValidationScriptsPartial"/>}
+}
