--- a/Autentication_crud/Views/User/UsersUpdate.cshtml
+++ b/Autentication_crud/Views/User/UsersUpdate.cshtml
@@ -18,43 +18,69 @@
         </div>
     }
 </div>
-<div class="row">
-    <div class="col-md-6">
-        <form asp-action="UsersUpdate">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="UserDataId" />
-            <input type="hidden" asp-for="UserSecurityId" />
 
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
+<div class="container-fluid">
+    <div class="row" style="margin-top:50px">
+        <div class="col-md-6">
+            <form asp-action="UsersUpdate" method="post" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="UserDataId" />
+                <input type="hidden" asp-for="UserSecurityId" />
 
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserPassword" class="control-label"></label>
-                <input asp-for="UserPassword" class="form-control" />
-                <span asp-validation-for="UserPassword" class="text-danger"></span>
-            </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="Name" class="col-form-label"></label>
+                            <input asp-for="Name" class="form-control">
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
 
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-            </div>
-        </form>
+                        <div class="form-group">
+                            <label asp-for="LastName" class="col-form-label"></label>
+                            <input asp-for="LastName" class="form-control">
+                            <span asp-validation-for="LastName" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <hr />
+                <h3>Seguridad de Cuenta</h3>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label asp-for="UserName" class="col-form-label"></label>
+                            <input asp-for="UserName" placeholder="Ingrese un Usuario" class="form-control">
+                            <span asp-validation-for="UserName" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label asp-for="UserPassword" class="col-form-label"></label>
+                            <input asp-for="UserPassword" type="password" placeholder="Ingrese una Contrasenia" class="form-control">
+                            <span asp-validation-for="UserPassword" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <a asp-action="RegisteredUsers" class="btn btn-secondary">Cancelar</a>
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <img src="~/img/updateUser.png" height="450" />
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="RegisteredUsers">Back to List</a>
-</div>
-
+@*Validación del lado del cliente*@
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
