--- a/Autentication_crud/Views/User/RegisteredUsers.cshtml
+++ b/Autentication_crud/Views/User/RegisteredUsers.cshtml
@@ -46,7 +46,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>#</th>
+            <th>ID</th>
             <th>NOMBRE</th>
             <th>APELLIDOS</th>
             <th>USUARIO</th>
@@ -59,35 +59,60 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserSecurityId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserData.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserData.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserPassword)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserRegisteredDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserState)
-            </td>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserSecurityId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserData.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserData.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserPassword)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserRegisteredDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserState)
+                </td>
 
 
-            <td>
-                <a asp-action="UsersUpdate" class="btn btn-info" asp-route-id="@item.UserSecurityId">Editar</a> |
-                <a asp-action="DeleteUser" class="btn btn-danger" asp-route-id="@item.UserSecurityId">Eliminar</a>               
-            </td>
-        </tr>
+                <td>
+                    <a asp-action="UsersUpdate" class="btn btn-info" asp-route-id="@item.UserSecurityId">Editar</a> |
+                    @*<a asp-action="DeleteUser" class="btn btn-danger" asp-route-id="@item.UserSecurityId">Eliminar</a>*@
+
+                    <a href="#DeleteConfirmation" id="datoID" class="btnDelete btn btn-danger" data-toggle="modal" data-id="@item.UserSecurityId">Eliminar</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
+
+
+
+@*Modal delete PENDIENTE NO LLEGA AL CONTROLADOR*@
+
+<div class="modal fade" id="DeleteConfirmation">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4>Eliminar Registro</h4>
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+            </div>
+            <div class="modal-body">
+                <h4>¿Estás seguro? </h4>
+                <h5>Quieres eliminar este registro.</h5>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn btn-primary" data-dismiss="modal" id="r">Cancelar</a>
+                <button class="btnConfir btn btn-danger">Confirmar</button>
+            </div>
+        </div>
+    </div>
+</div>
