--- a/Autentication_crud/wwwroot/css/site.css
+++ b/Autentication_crud/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.col-center {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+}
